# OMPEval_py_wrapper

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.dev.pybind11  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: index.rst  ompeval.rst
src/: main.cpp
tests/: ompeval_test.py  test.py  test_basic.py  test_equity.py
